feat: :zap: Refatoraçao e Adicao de Conteudo
