# src/routes/specifications.routes.ts
@@ -1,14 +1,11 @@
 import { Router } from "express";
 
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationRoutes = Router();
 
-specificationRoutes.post("/", (req, res) => {
-  return createSpecificationController.handle(req, res);
-});
+const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.get("/", (req, res) => {
-  return createSpecificationController.handle(req, res);
-});
+specificationRoutes.post("/", createSpecificationController.handle);
+
 export { specificationRoutes };
